[package]
name = "basic_allocator"
version = "0.1.2"
description = "A very simple global allocator written in pure Rust"
repository = "https://github.com/wackywendell/basicalloc"
documentation = "https://docs.rs/basic_allocator"
license-file = "LICENSE"
readme = "README.md"
authors = ["Wendell Smith <wackywendell@gmail.com>"]
edition = "2018"

[dependencies]
# libc is used to get pages of virtual memory from the Unix OS
libc = "0.2"
# sysconf tells us the size of a page
sysconf = "0.3"
# Static assertions check that our assumptions are valid at compile-time
static_assertions = "1.1"
# A spin lock is used to protect the allocator in a multi-threaded capacity.
spin = "0.5"

[dev-dependencies]
# log is used for logging in tests.
log = "0.4"
# test-env-log allows `RUST_LOG=...` to output test logs when tests fail.
test-env-log = "0.2"
# env_logger is required for test-env-log.
env_logger = "0.7"
# We use random numbers to do some stress tests.
rand = "0.7"